// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum ApigeeBetaOrganizationRuntimeTypeEnum {
  ApigeeBetaOrganizationRuntimeTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ApigeeBetaOrganizationRuntimeTypeEnumRUNTIME_TYPE_UNSPECIFIED = 1;
  ApigeeBetaOrganizationRuntimeTypeEnumCLOUD = 2;
  ApigeeBetaOrganizationRuntimeTypeEnumHYBRID = 3;
}

enum ApigeeBetaOrganizationSubscriptionTypeEnum {
  ApigeeBetaOrganizationSubscriptionTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ApigeeBetaOrganizationSubscriptionTypeEnumSUBSCRIPTION_TYPE_UNSPECIFIED = 1;
  ApigeeBetaOrganizationSubscriptionTypeEnumPAID = 2;
  ApigeeBetaOrganizationSubscriptionTypeEnumTRIAL = 3;
}

enum ApigeeBetaOrganizationBillingTypeEnum {
  ApigeeBetaOrganizationBillingTypeEnumNO_VALUE_DO_NOT_USE = 0;
  ApigeeBetaOrganizationBillingTypeEnumBILLING_TYPE_UNSPECIFIED = 1;
  ApigeeBetaOrganizationBillingTypeEnumSUBSCRIPTION = 2;
  ApigeeBetaOrganizationBillingTypeEnumEVALUATION = 3;
}

enum ApigeeBetaOrganizationStateEnum {
  ApigeeBetaOrganizationStateEnumNO_VALUE_DO_NOT_USE = 0;
  ApigeeBetaOrganizationStateEnumSNAPSHOT_STATE_UNSPECIFIED = 1;
  ApigeeBetaOrganizationStateEnumMISSING = 2;
  ApigeeBetaOrganizationStateEnumOK_DOCSTORE = 3;
  ApigeeBetaOrganizationStateEnumOK_SUBMITTED = 4;
  ApigeeBetaOrganizationStateEnumOK_EXTERNAL = 5;
  ApigeeBetaOrganizationStateEnumDELETED = 6;
}

message ApigeeBetaOrganization {
  string name = 1;
  string display_name = 2;
  string description = 3;
  int64 created_at = 4;
  int64 last_modified_at = 5;
  int64 expires_at = 6;
  repeated string environments = 7;
  map<string, string> properties = 8;
  string analytics_region = 9;
  string authorized_network = 10;
  ApigeeBetaOrganizationRuntimeTypeEnum runtime_type = 11;
  ApigeeBetaOrganizationSubscriptionTypeEnum subscription_type = 12;
  ApigeeBetaOrganizationBillingTypeEnum billing_type = 13;
  ApigeeBetaOrganizationAddonsConfig addons_config = 14;
  string ca_certificate = 15;
  string runtime_database_encryption_key_name = 16;
  string project_id = 17;
  ApigeeBetaOrganizationStateEnum state = 18;
  string project = 19;
}

message ApigeeBetaOrganizationAddonsConfig {
  ApigeeBetaOrganizationAddonsConfigAdvancedApiOpsConfig advanced_api_ops_config = 1;
  ApigeeBetaOrganizationAddonsConfigMonetizationConfig monetization_config = 2;
}

message ApigeeBetaOrganizationAddonsConfigAdvancedApiOpsConfig {
  bool enabled = 1;
}

message ApigeeBetaOrganizationAddonsConfigMonetizationConfig {
  bool enabled = 1;
}

message ApplyApigeeBetaOrganizationRequest {
  ApigeeBetaOrganization resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteApigeeBetaOrganizationRequest {
  string service_account_file = 1;
  ApigeeBetaOrganization resource = 2;
}

message ListApigeeBetaOrganizationRequest {
  string service_account_file = 1;
}

message ListApigeeBetaOrganizationResponse {
  repeated ApigeeBetaOrganization items = 1;
}

service ApigeeBetaOrganizationService {
  rpc ApplyApigeeBetaOrganization(ApplyApigeeBetaOrganizationRequest) returns (ApigeeBetaOrganization);
  rpc DeleteApigeeBetaOrganization(DeleteApigeeBetaOrganizationRequest) returns (google.protobuf.Empty);
  rpc ListApigeeBetaOrganization(ListApigeeBetaOrganizationRequest) returns (ListApigeeBetaOrganizationResponse);
}
